# flask_tutorial_flaskr

./: hello.py  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: create.html  index.html  update.html
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py
